--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -3,5 +3,10 @@
     padding-bottom: 10px;
     text-align: justify;
    
+  /*   max-height: 100px;
+    object-fit:fill;
+    align-items: center; */
+     
+   
    
 }
