--- a/src/components/detailproduct/DetailProduct.scss
+++ b/src/components/detailproduct/DetailProduct.scss
@@ -1,11 +1,9 @@
 .wrapper-detail {
-  width: 1366px;
+  width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   @media (max-width: 768px) {
-     
-    
     justify-content: space-between;
   }
 }
@@ -23,7 +21,7 @@
   @media (max-width: 768px) {
     justify-content: center;
     flex-direction: column;
-   margin-left: 0 px;
+    margin-left: 0px;
     align-items: flex-start;
   }
 }
@@ -66,7 +64,7 @@
 .product-info .price {
   font-weight: bold;
   font-size: larger;
-  color: #E33628;
+  color: #e33628;
   margin-bottom: 0.5rem;
 }
 
@@ -75,26 +73,41 @@
 }
 
 .options {
-  margin: 1rem 0;
-  padding:10px;
+  margin: .5rem 0;
+  /* padding: 10px; */
+}
+.like-this-one {
+  height: 50px;
+  color: #e33628;
+}
+.btn-red {
+  background-color: #e33628;
+  padding: 1px 10px 1px 10px;
+  border-radius: 4px;
+}
+.btn-black {
+  border-radius: 4px;
+  background-color: #000000;
+  padding: 1px 10px 1px 10px;
+
+  color: white;
+}
+.morewrapper{
+      width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.more {
+     /* width: 1200px; */
+     margin: 50px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.input-detail{
+  width: 50px;
+  text-align: center;
+  border-radius: 5px;
   
-}
-.like-this-one{
-    height: 50px;
-    color: #E33628;
-    
-}
-.btn-red{
-    background-color: #E33628 ;
-    padding: 1px 10px 1px 10px;
-    border-radius: 4px;
-    
-}
-.btn-black{
-    border-radius: 4px;
-    background-color: #000000 ;
-    padding: 1px 10px 1px 10px;
-   
-    color: white;
-    
 }
