--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -1,25 +1,23 @@
 @use "../../styles/variables";
 
-
-.nav_wrapper{
-display: flex;
-
-
+.nav_wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 .nav {
- 
-  padding: 10px 60px;
+  padding: 10px 0px;
   display: flex;
   align-items: center;
+  justify-content: center;
   position: absolute;
-  width: 100%;
+  width: 1200px;
   z-index: 1000;
   background-color: variables.$color-bg-light;
   backdrop-filter: blur(5px);
-  box-shadow:  0px 2px #0000001a;
+  box-shadow: 0px 2px #0000001a;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1); // $color-border não existe
   margin-right: 10px;
-  
 }
 
 .logo {
@@ -35,10 +33,9 @@ display: flex;
 
 .nav-flex {
   display: flex;
-  width: 90%;
+  width: 100%;
   align-items: center;
   justify-content: space-between;
-  max-width: 1366px;
 }
 
 .nav-items {
@@ -56,8 +53,8 @@ display: flex;
   height: 30px;
   background-color: variables.$color-bg-light;
   border-radius: variables.$radius-default;
-  border: 1px solid rgba(0,0,0,0.2); // $color-border não existe
-  color: variables.$color-text-dark;   // usar uma variável existente
+  border: 1px solid rgba(0, 0, 0, 0.2); // $color-border não existe
+  color: variables.$color-text-dark; // usar uma variável existente
   padding: 0px 12px; /* espaçamento interno */
   font-size: 10px;
 }
