--- a/src/components/categoriescard/CategoriesCard.scss
+++ b/src/components/categoriescard/CategoriesCard.scss
@@ -1,4 +1,5 @@
 
+
 .product_card {
   display: flex;
   flex-direction: row;
@@ -6,7 +7,7 @@
   max-width: 150px;
   
   p {
-  line-height: 1.1; /* padrão é ~1.5 */
+  line-height: 1.1; 
 }
   
 }
