--- a/src/components/morelikethis/MoreLikeThis.scss
+++ b/src/components/morelikethis/MoreLikeThis.scss
@@ -1,58 +1,52 @@
-/* .flex-more-like-this {
-      display: flex;
-    flex-direction: row;
-    gap: 10px;
-    padding: 2px;
-    height: 350px;
-    max-width: 1000px;
-    overflow-x: auto;
-    overflow-y: hidden;
-    scrollbar-width: thin;
-    scrollbar-color: #888 transparent;
-    align-items: flex-start;
-}
-
-.flex-more-like-this::-webkit-scrollbar {
-  height: 8px;
-}
-
-.flex-more-like-this::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 4px;
-}
-
-.flex-more-like-this::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-.card-wrapper-more-like-this{
-  width: 200px;
- 
-  
-} */
-/* css antigo v1 sem carrocel */
 .flex-more-like-this {
   display: flex;
   flex-direction: row;
-  gap: 10px;
   padding: 2px;
   height: 350px;
   max-width: 1000px;
   overflow-x: auto;
   overflow-y: hidden;
-  scrollbar-width: thin;
-  scrollbar-color: #888 transparent;
   align-items: flex-start;
+  gap: 10px;
+
+  @media (max-width: 1024px) {
+    gap: 8px;
+  }
+
+  @media (max-width: 768px) {
+    gap: 5px;
+  }
+
+  @media (max-width: 607px) {
+    gap: 2px;
+  }
+
+  &::-webkit-scrollbar {
+    height: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 }
-.flex-more-like-this::-webkit-scrollbar {
-  height: 8px;
-}
-.flex-more-like-this::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 4px;
-}
-.flex-more-like-this::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
+
 .card-wrapper-more-like-this {
   width: 200px;
+
+  @media (max-width: 1024px) {
+    width: 180px;
+  }
+
+  @media (max-width: 768px) {
+    width: 150px;
+  }
+
+  @media (max-width: 480px) {
+    width: 120px;
+  }
 }
