--- a/src/components/shopcart/ShopCart.scss
+++ b/src/components/shopcart/ShopCart.scss
@@ -1,127 +1,163 @@
+@use "../../styles/variables" as variables;
+@use "../../styles/mixins" as mixins;
+
 .wrapper-shop {
   display: flex;
-  margin-top: 100px;
-  width: 100vw;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  width: 100%;
+  margin-top: 100px;
+  box-sizing: border-box;
+  padding: 0 1rem;
 }
 
 .shop-wrapper {
-  display: grid;
   grid-template-columns: 3fr 1fr;
-  column-gap: 20px;
-  width: 1200px;
+  gap: 20px;
+  width: 100%;
+  max-width: 1200px;
   color: rgb(0, 0, 0);
 }
 
 .flex-shop {
-  width: 1200;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 100%;
 }
-.sidebar {
-  position: sticky;
-  top: 100px;
 
-  border-radius: 5px;
-  width: 300px;
-  height: 210px;
-  background-color: rgb(230, 230, 230);
-}
-.price-container {
-  padding: 40px 40px 10px 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  .shop-cart-btn {
-    max-width: 100px;
-  }
-}
-.values {
-  display: flex;
-  flex-direction: column;
-  width: 1200px;
-  height: 200px;
-  background-color: rgb(7, 244, 102);
-  align-content: center;
-  align-items: center;
-  justify-content: center;
-  p {
-    color: aliceblue;
-  }
-}
-/* border : 1px solid  #ddd;
-  border-radius: 5px;
-  position: relative;
-  height: 270px;
-  padding: 0px 0px 10px 10px;
-} */
 .card-wrapper-shop {
-  border: 1px solid #ddd;
-  border-radius: 5px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
   position: relative;
-  height: 270px;
-  padding: 0px 0px 10px 10px;
+  background-color: #fff;
+  overflow: hidden;
+
+  .shopcard-link {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color: inherit;
+    transition: none;
+
+    &:hover {
+      transform: none;
+    }
+
+    .quantity-control {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      padding: 8px 10px;
+      background-color: #f5f5f5;
+
+      input {
+        width: 50px;
+        text-align: center;
+        font-size: 16px;
+        padding: 4px;
+        border-radius: 4px;
+        border: 1px solid variables.$color-border;
+        outline: none;
+
+        &::-webkit-outer-spin-button,
+        &::-webkit-inner-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+      }
+
+      button {
+        padding: 4px 8px;
+        font-size: 16px;
+        border: 1px solid variables.$color-border;
+        background-color: variables.$color-gray-light;
+        border-radius: 4px;
+        cursor: pointer;
+
+        &:hover {
+          background-color: variables.$color-gray-dark;
+        }
+      }
+    }
+  }
 }
 
-.quantity-control {
-  padding: 0px 0px 0px 40px;
-  border-radius: 5px;
-  max-width: 40px;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  gap: 4px;
+.sidebar {
+  position: relative;
+  bottom: auto;
+  right: auto;
+  margin-top: 20px;
+
+  .price-container {
+    background-color: #e9e9e9;
+    border-radius: 5px;
+    padding: 20px 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+
+    .shop-cart-btn {
+      @include mixins.button-base(
+        variables.$color-gray-light,
+        variables.$color-text-dark
+      );
+      width: 70px;
+      height: 35px;
+      margin-top: 10px;
+
+      &:hover {
+        background-color: variables.$color-gray-dark;
+      }
+    }
+  }
 }
 
-.quantity-control input {
-  width: 50px;
-  text-align: center;
-  font-size: 16px;
-  padding: 4px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  outline: none;
-
-  /* Remove setinhas no Firefox */
-  -moz-appearance: textfield;
-}
-
-/* Remove setinhas no Chrome, Safari e Edge */
-.quantity-control input::-webkit-outer-spin-button,
-.quantity-control input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-.quantity-control button {
-  padding: 4px 8px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  background-color: #f5f5f5;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.quantity-control button:hover {
-  background-color: #e0e0e0;
-}
-
-.quantity-control {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-}
 .empty-cart {
   font-size: 2rem;
   font-weight: 300;
+  text-align: center;
+  padding: 2rem 0;
 }
+
 .cart-total {
   font-size: 1.9rem;
 }
-span {
-  color: #e33628;
-  line-height: 3;
+
+.shop-wrapper span {
+  color: variables.$color-span;
+  line-height: 1.5;
+  font-size: 2rem;
+}
+
+@media (max-width: 1024px) {
+  .shop-wrapper {
+    grid-template-columns: 2fr 1fr;
+    gap: 15px;
+    padding: 0 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    position: relative;
+    bottom: auto;
+    right: auto;
+    margin-top: 20px;
+  }
+}
+
+/* Mobile pequeno */
+@media (max-width: 480px) {
+  .shop-wrapper {
+    padding: 0 0.5rem;
+  }
+  .sidebar {
+    position: relative;
+    bottom: auto;
+    right: auto;
+    margin-top: 20px;
+  }
 }
