--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,16 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap");
 $font-main: "IBM Plex Sans", sans-serif;
-
-$color-text-dark: rgba(255, 255, 255, 0.87);
+$font-size-btn :1.2rem;
+$font-size-shop :1.5rem;
+$color-text-dark: rgba(0, 0, 0, 0.87);
 $color-text-light: #213547;
 $color-text-red: #000000;
+$color-border: #ccc;
+$color-gray-light: rgb(204, 204, 204);
+$color-gray-dark: rgb(189, 188, 188);
 
+$color-span: #e33628;
 $color-bg-light: #ffffff;
-$color-bg-dark: #1a1a1a;
+$color-bg-dark: #e00f0f;
 $color-bg-button-hover: rgb(159, 158, 158);
+$color-bg-price-container: #e9e9e9; 
 
-$button-radius: 8px;
+$button-radius: 5px;
+$button-color: rgb(95, 82, 82);
 $button-padding: 0.6em 1.2em;
 $button-font-weight: 500;
 $button-font-size: 1em;
 
-$radius-default: 8px;
+$radius-default: 5px;
