--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,4 @@
-@use "./variables";
-
+@use "./variables" as variables;
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap");
 
 :root {
@@ -31,7 +30,7 @@ a {
   font-weight: 500;
 
   &:hover {
-    text-decoration: underline;
+    /* text-decoration: underline; */
     text-underline-offset: 5px;
   }
 }
