--- a/src/components/categories/Categories.scss
+++ b/src/components/categories/Categories.scss
@@ -4,10 +4,11 @@
   align-items: center;
   margin-top: 30px;
   margin-left: 50px;
-
-
+  margin-right: 50px;
   @media (max-width: 768px) {
     margin-top: 50px;
+  }
+  @media (max-width: 480px) {
   }
 
   .title-container {
@@ -27,13 +28,13 @@
     max-width: 1200px;
 
     @media (max-width: 1024px) {
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(4, 1fr);
     }
     @media (max-width: 768px) {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(3, 1fr);
     }
     @media (max-width: 480px) {
-      grid-template-columns: 1fr;
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 }
