--- a/src/components/categoriescard/CategoriesCard.scss
+++ b/src/components/categoriescard/CategoriesCard.scss
@@ -1,20 +1,16 @@
-
-
 .product_card {
   display: flex;
   flex-direction: row;
-  align-items:last baseline;
+  align-items: last baseline;
   max-width: 150px;
-  
+
   p {
-  line-height: 1.1; 
-}
-  
+    line-height: 1.1;
+  }
 }
 .header {
   display: flex;
   margin-right: 10px;
-  
 }
 .text {
   display: flex;
@@ -22,17 +18,15 @@
 }
 .category {
   color: #81807e;
-  font-size: .9rem;
-   @media (max-width: 1024px){
-    font-size: .8rem;
+  font-size: 0.9rem;
+  @media (max-width: 1024px) {
+    font-size: 0.8rem;
   }
 }
 .item {
   font-size: 1.2rem;
-  
-  @media (max-width: 1024px){
+
+  @media (max-width: 1024px) {
     font-size: 1rem;
   }
- 
 }
-
