--- a/src/components/loader/Loader.scss
+++ b/src/components/loader/Loader.scss
@@ -2,14 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 200px; // ajusta conforme o contexto
+  min-height: 200px;
 }
 
 .loader {
   width: 40px;
   height: 40px;
   border: 4px solid #ccc;
-  border-top: 4px solid black; // cor principal
+  border-top: 4px solid black;
   border-radius: 50%;
   animation: spin 0.8s linear infinite;
 }
