--- a/src/components/shopcart/ShopCart.scss
+++ b/src/components/shopcart/ShopCart.scss
@@ -25,6 +25,18 @@
   flex-direction: column;
   gap: 1rem;
   width: 100%;
+  @media (max-width: 1024px) {
+    width: 1000px;
+  }
+  @media (max-width: 768px) {
+    width: 700px;
+  }
+  @media (max-width: 607px) {
+    width: 600px;
+  }
+  @media (max-width: 320px) {
+    width: 300px;
+  }
 }
 
 .card-wrapper-shop {
@@ -33,6 +45,7 @@
   position: relative;
   background-color: #fff;
   overflow: hidden;
+  padding: 10px;
 
   .shopcard-link {
     display: flex;
