--- a/src/components/shopcartcard/ShopCartCard.scss
+++ b/src/components/shopcartcard/ShopCartCard.scss
@@ -1,21 +1,19 @@
 a {
-    text-decoration: none;  
-    color: inherit;         
+  text-decoration: none;
+  color: inherit;
 
-    &:hover,
-    &:focus,
-    &:active {
-      color: inherit;      
-    }
+  &:hover,
+  &:focus,
+  &:active {
+    color: inherit;
   }
+}
 .shopcard {
   width: 100%;
   height: 100%;
   border-radius: 10px;
   text-align: left;
   transition: transform 0.2s ease;
-  
-
 
   .shop-card-container {
     display: grid;
@@ -23,6 +21,10 @@ a {
     gap: 10px;
     align-items: start;
     padding: 10px;
+    @media (width: 1024px) {
+      display: flex;
+      flex-direction: row;
+    }
   }
 
   .shop-img {
@@ -32,6 +34,9 @@ a {
       height: auto;
       border-radius: 5px;
       object-fit: cover;
+      @media (width: 1024px) {
+        width: 200px;
+      }
     }
   }
 
@@ -50,7 +55,6 @@ a {
       text-align: justify;
       font-size: 1rem;
       font-weight: 100;
-      line-height: 1.2rem;
       overflow: hidden;
       text-overflow: ellipsis;
       display: -webkit-box;
@@ -65,6 +69,9 @@ a {
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
+    @media (max-width: 607px) {
+      align-items: flex-start;
+    }
 
     .price-color {
       color: #e33628;
@@ -72,10 +79,7 @@ a {
       font-size: 2rem;
     }
   }
-
-  
 }
-
 
 @media (max-width: 768px) {
   .shop-card-container {
